--- a/smang/smang.css
+++ b/smang/smang.css
@@ -2,6 +2,7 @@
 
 body {
 	font-family: arial;
+	background-color: #ccc;
 }	
 
 a {
@@ -9,20 +10,24 @@ a {
 }
 
 #insertbox  {
-	background-color: #ccc;
-	border-radius: 20px;
-	margin-left: 5px;
+	position:absolute;
+	top:0px;
+	left:0px;
+	background-color: #333;
 	padding: 8px;
-	width: 95%;
+	width: 100%;
 	height: 10%;
 }
 
 #main {
+	position:absolute;
+	top:8%;
+	background-color: #fff;
 	margin: 4px;
 	overflow: auto;
 	position: absolute;
-	border: 1px solid #ccc;
-	border-radius: 20px;
+	border: 1px solid #aaa;
+	border-radius: 4px;
 	width: 95%;
 	height: 650px;
 }
@@ -33,12 +38,17 @@ a {
 }
 
 .add {
-	float: right;
 }
 
 .draggable { 
+	background: #fff;
 	border: 1px solid #bbb;
 	width: intrinsic;
 	height: auto; 
 	padding: 0.5em; 
+}
+
+.owner {
+	font-size:8pt;
+	font-color:#ccc;
 }
