--- a/smang/smang.css
+++ b/smang/smang.css
@@ -6,6 +6,7 @@ body {
 }	
 
 a {
+	margin-right: 8px;
 	text-decoration: none;
 }
 
@@ -45,7 +46,22 @@ a {
 	border: 1px solid #bbb;
 	width: intrinsic;
 	height: auto; 
-	padding: 0.5em; 
+	padding: 0.5em;
+	border-radius: 2px; 
+}
+
+.delete {
+	position: absolute;
+	top: 2px;
+	right: 2px;
+	border: 1px solid #333;
+	font-color: #fff;
+	background-color: #ccc;
+	width: 10px;
+	height: 10px;
+	font-size: 8px;
+	text-align: center;
+	border-radius: 10px;
 }
 
 .owner {
