Smash it and commit it

--- a/smang/smang.css
+++ b/smang/smang.css
@@ -23,7 +23,7 @@ a {
 #main {
 	position:absolute;
 	top:8%;
-	background-color: #fff;
+	background-color: #ddd;
 	margin: 4px;
 	overflow: auto;
 	border: 1px solid #aaa;
