--- a/smang/smang.css
+++ b/smang/smang.css
@@ -23,24 +23,24 @@ img {
 	background-color: #333;
 	padding: 8px;
 	width: 100%;
-	height: 10%;
+	height: 5%;
 }
 
-#main {
+.main {
 	position:absolute;
 	top:8%;
 	margin: 4px;
 	overflow: auto;
 	border: 1px solid #aaa;
 	border-radius: 4px;
-	width: 75%;
-	height: 650px;
+	width: 1366px;
+	height: 768px;
 }
 
-#main:before {
-	content: url("http://lorempixel.com/1000/1000");
+.main:before {
+	content: url("http://lorempixel.com/1366/768");
 	opacity:0.5;
-	background: url("http://lorempixel.com/1000/1000");
+	background: url("http://lorempixel.com/1366/768");
 }
 
 
